# RayRuster

./: .gitignore  Cargo.toml
src/: intersecable.rs  lib.rs  main.rs  settings.rs  testing.rs  utils.rs
src/figure/: plane.rs  sphere.rs  triangle.rs
src/figures/: mod.rs  plane.rs  sphere.rs  triangle.rs
src/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/raytracing/: camera.rs  color.rs  hit.rs  hit_record.rs  intersectable.rs  intersectable_list.rs  material.rs  mod.rs  point3.rs  ray.rs
