[package]
name = "rayruster"
version = "0.1.0"
authors = ["Marc Cane <marc00077@hotmail.com>", "Enric Rodriguez <u1939673@campus.udg.edu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
rand = "0.5.5"
pixel-canvas = "0.2.1"